--- a/src/Styles/_media.desktop.scss
+++ b/src/Styles/_media.desktop.scss
@@ -18,9 +18,20 @@ header {
   width: 100%;
   height: 200px;
   position: relative;
-  margin-top: 9%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media (max-width: 2048px) {
+  header {
+    margin-top: 100px;
+  }
+}
+
+@media (max-width: 800px) {
+  header {
+    margin-top: 50px;
+  }
 }
 
 /* adorner: left corner shadow */
