Fix coordinate rounding with media breaks

--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -13,9 +13,6 @@
 .date-selector {
     // Enable absolute positioning for children relative to self
     position: relative;
-
-    // Fix vector mapping alias on IE.
-    top: 0.5px;
     
     // Expanded height
     height: 130px;
@@ -589,6 +586,13 @@
     height: 4px;
     background: $accent-light-color;
   }
+}
+
+.ie {
+    .date-selector {
+        // Fix vector mapping alias on IE.
+        top: 0.5px;
+    }
 }
 
 // Weekly tag stacked bar 
