--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -418,7 +418,7 @@
             // Arrow icon wrapper 
             .date-selector-page-label {
                 left: 1px;
-                top: -1.7px;
+                top: -1px;
             }
 
             // Focus outline
@@ -592,6 +592,10 @@
     .date-selector {
         // Fix vector mapping alias on IE.
         top: 0.5px;
+    }
+
+    .date-selector-scroll-left .date-selector-page-label {
+        top: -1.7px;
     }
 }
 
