--- a/src/Views/Index.cshtml
+++ b/src/Views/Index.cshtml
@@ -15,6 +15,7 @@
 <html data-ng-app="zeroApp" data-user-agent data-focus-accessibility>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <meta name="msapplication-TileColor" content="#FFFFFF">
