Update tooltip to accept html

--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -740,3 +740,11 @@ $crafts:      #67d5e9;
     }
   }
 }
+
+.tag-bar-tip {
+    display: none;
+}
+
+.tooltip-content .tag-bar-tip {
+    display: block;
+}
