--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -748,14 +748,19 @@ $crafts:      #67d5e9;
 .tag-bar-tip {
     display: none;
     min-width: 150px;
+    color: $foreground-color;
 
     h4 {
+        color: $drop-shadow-light-color;
         font-family: $small-font;
-        font-size: $small-font-size - 1;
+        font-size: 10pt;
         font-weight: normal;
-        color: $secondary-text-color;
         margin: 0;
         padding: 0;
+
+        span {
+            color: $foreground-color;
+        }
     }
 
     .tag-days {
@@ -769,18 +774,37 @@ $crafts:      #67d5e9;
         float: left;
         margin: 0;
         padding: 0;
-        padding-right: 8px;
+        padding-right: 14px;
         margin-bottom: 6px;
         list-style: none;
+
+        div {
+            float: left;
+            width: 10px;
+            height: 5px;
+            border: 1px solid white;
+            margin-top: 3px;
+            margin-right: 6px;
+            box-shadow: 0 0 4px 0 $drop-shadow-light-color;
+        }
+
+        span {
+            color: $drop-shadow-light-color;
+        }
     }
 
     .tag-article-list {
         float: left;
         margin: 0;
         padding: 0;
-        padding-left: 8px;
+        padding-left: 26px;
         margin-bottom: 6px;
         border-left: 1px dotted $border-color;
-        list-style: none;
+        list-style-type: square;
+        color: $drop-shadow-light-color;
+        
+        span {
+            color: $foreground-color;
+        }
     }
 }
