--- a/src/Styles/_tooltip.scss
+++ b/src/Styles/_tooltip.scss
@@ -5,7 +5,7 @@
         rgba(240, 240, 240, 1) 100%);
     color: $foreground-color;
     font-family: sans-serif;
-    font-size: 12px;
+    font-size: 10pt;
     pointer-events: none;
     padding-top: 5px;
     padding-bottom: 5px;
