--- a/src/Styles/_shared.scss
+++ b/src/Styles/_shared.scss
@@ -21,6 +21,7 @@ $primary-dark-color: #0E93AD;
 $primary-dark-shadow-color: #10A6C4;
 $primary-text-color: #FFFFFF;
 
+$secondary-color: #a158ba;
 $secondary-text-color: #848D95;
 
 $accent-color: #E3EBEC;
