--- a/src/Styles/_tooltip.scss
+++ b/src/Styles/_tooltip.scss
@@ -1,8 +1,8 @@
 .tooltip {
     position: absolute;
     background: linear-gradient(
-        rgba(255, 255, 255, 0.9) 40%,
-        rgba(240, 240, 240, 1) 100%);
+        $background-color 40%,
+        rgb(240, 240, 240) 100%);
     color: $foreground-color;
     font-family: sans-serif;
     font-size: 10pt;
@@ -11,6 +11,7 @@
     padding-bottom: 5px;
     padding-left: 10px;
     padding-right: 10px;
+    opacity: 0.9;
     z-index: 2000;
 }
 
