--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -782,7 +782,7 @@ $crafts:      #67d5e9;
 
 .tag-days__sample-label--background {
     stroke: none;
-    fill: $secondary-text-color;
+    fill: $secondary-color
 }
 
 .tag-days__day-label {
