--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -759,13 +759,21 @@ $crafts:      #67d5e9;
     display: block;
 }
 
-.tag-days {
+.tag-days--wrapper {
+    position: relative;
     float: left;
-    width: 250px;
+    width: 100%;
     height: 45px;
-    font-size: 12px;
+    text-align: center;
     margin: 3px 0px;
     margin-bottom: 6px;
+}
+
+.tag-days {
+    width: 250px;
+    height: 45px;
+    margin: 0 auto;
+    font-size: 12px;
     stroke: $border-color;
     fill: none;
 }
