--- a/src/Styles/_tooltip.scss
+++ b/src/Styles/_tooltip.scss
@@ -1,7 +1,7 @@
 .tooltip {
     position: absolute;
     background: linear-gradient(
-        $background-color 40%,
+        rgba(255, 255, 255, .95) 40%,
         rgb(240, 240, 240) 100%);
     color: $foreground-color;
     font-family: sans-serif;
