Adjust paragraph and social spacing

--- a/src/Styles/_comments.scss
+++ b/src/Styles/_comments.scss
@@ -1,5 +1,5 @@
 .comments {
-  margin-top: -8px;
+  margin-top: 0;
   margin-left: 1.5em;
   font-family: $small-font;
   font-size: $small-font-size;
