--- a/src/Styles/_date.selector.scss
+++ b/src/Styles/_date.selector.scss
@@ -669,16 +669,8 @@
         margin-top: 3px;
     }
 
-    &-selected &-legend__label {
-        color: $background-color;
-
-        span {
-            color: rgba($background-color, 0.5);
-        }
-
-        &:before {
-            opacity: 1;
-        }
+    &-selected &-legend__label:before {
+        background-color: $accent-color;
     }
 }
 
@@ -867,14 +859,12 @@
     &:before {
         content: '';
         position: absolute;
-        background-color: rgba($secondary-text-color, 0.7);
         left: -6px;
         right: -6px;
-        top: -1px;
+        top: 0;
         bottom: -1px;
-        opacity: 0;
         z-index: -1;
-        transition: opacity .2s ease-out;
+        transition: background .2s ease-out;
     }
 }
 
